extends Node3D

func _ready():
	pass

func _process(delta):
	pass

func playMaskBuilding():
	$MaskBuilding.play()
	
func playBeanCombat():
	$BeanCombat.play()
	
func playOceanAmbience():
	$OceanAmbience.play()
	
func playD1():
	$Dialogue1.play()
	
func playD2():
	$Dialogue2.play()
	
func playD3():
	$Dialogue3.play()
	
func playD4():
	$Dialogue4.play()
	
func playD5():
	$Dialogue5.play()
